# otus-cpp-basics

./: .gitignore  1.txt  2.txt  3.txt  4.txt  5.txt  Ball.cpp  Ball.hpp  CMakeLists.txt  CMakePresets.json  Color.cpp  Color.hpp  ConsistentContainer.h  Physics.cpp  Point.hpp  README.md  SaveFile.cpp  SaveFile.hpp  SortAlgorithmMeasuring.cpp  SortAlgorithmMeasuring.hpp  Velocity.hpp  World.cpp  common.hpp  conanfile.txt  connectionmanager.cpp  connectionmanager.hpp  consoleOutput.cpp  consoleOutput.hpp  database.conf  dbconfig.cpp  dbconfig.hpp  deleteSQL.cpp  deleteSQL.hpp  getRandomNumber.cpp  getRandomNumber.hpp  input.txt  listContainer.h  main.cpp  optimized_topk_words.cpp  output.txt  (+14 more)
test/: CMakeLists.txt  container_test.cpp  container_test_consistent.cpp
tools/: launch.json  simulator_build_debug.sh  simulator_build_release.sh
